--- a/index.html
+++ b/index.html
@@ -39,45 +39,59 @@
   </div>
 
   <div class="legend">
-    <!-- Elemento 1: Hidrógeno -->
-<div class="tooltip">H - Hidrógeno
-  <span class="tooltiptext">
-    Hidrógeno: el más ligero
-    <img src="https://media.istockphoto.com/id/1408842388/es/vector/h-informaci%C3%B3n-del-elemento-de-hidr%C3%B3geno-hechos-propiedades-tendencias-usos-y-comparaci%C3%B3n.jpg?s=612x612&w=0&k=20&c=6bjme-aQsHwEZ9ZkF726TZ7j-wCALG4TOAe7i4ZSCzA=" alt="Hidrógeno">
-  </span>
-</div>
 
-<!-- Elemento 2: Helio -->
-<div class="tooltip">He - Helio
-  <span class="tooltiptext">
-    Helio: gas noble, muy ligero
-    <img src="https://media.istockphoto.com/id/494979590/es/vector/s%C3%ADmbolo-de-electrones-diagrama-helio.jpg?s=612x612&w=0&k=20&c=U8Tva995Pv0c_Gj6hm3CEiet0vPFrR92mFDnKIiPN8U=" alt="Helio">
-  </span>
-</div>
-
-<!-- Elemento 3: Litio -->
-<div class="tooltip">Li - Litio
-  <span class="tooltiptext">
-    Litio: metal alcalino, usado en baterías
-    <img src="https://media.istockphoto.com/id/488550064/es/vector/s%C3%ADmbolo-y-diagrama-de-electrones.jpg?s=612x612&w=0&k=20&c=-bAWt_2XYMrwyjTEtxB3SYeS1aprxPYAIJNfw6dUuJE=" alt="Litio">
-  </span>
-</div>
-    <div class="tooltip">Be - Berilio
+    <div class="tooltip">1 = H - Hidrógeno
+      <span class="tooltiptext">
+        Hidrógeno: el más ligero
+        <img src="https://media.istockphoto.com/id/1408842388/es/vector/h-informaci%C3%B3n-del-elemento-de-hidr%C3%B3geno-hechos-propiedades-tendencias-usos-y-comparaci%C3%B3n.jpg?s=612x612&w=0&k=20&c=6bjme-aQsHwEZ9ZkF726TZ7j-wCALG4TOAe7i4ZSCzA=" alt="Hidrógeno">
+      </span>
+    </div>
+    <div class="tooltip">2 = He - Helio
+      <span class="tooltiptext">
+        Helio: gas noble, muy ligero
+        <img src="https://media.istockphoto.com/id/494979590/es/vector/s%C3%ADmbolo-de-electrones-diagrama-helio.jpg?s=612x612&w=0&k=20&c=U8Tva995Pv0c_Gj6hm3CEiet0vPFrR92mFDnKIiPN8U=" alt="Helio">
+      </span>
+    </div>
+    <div class="tooltip">3 = Li - Litio
+      <span class="tooltiptext">
+        Litio: metal alcalino, usado en baterías
+        <img src="https://media.istockphoto.com/id/488550064/es/vector/s%C3%ADmbolo-y-diagrama-de-electrones.jpg?s=612x612&w=0&k=20&c=-bAWt_2XYMrwyjTEtxB3SYeS1aprxPYAIJNfw6dUuJE=" alt="Litio">
+      </span>
+    </div>
+    <div class="tooltip">4 = Be - Berilio
       <span class="tooltiptext">
         Berilio: metal alcalinotérreo
         <img src="https://previews.123rf.com/images/oorka/oorka1704/oorka170400003/75507009-procesamiento-3d-de-la-estructura-del-%C3%A1tomo-de-berilio-aislado-sobre-fondo-blanco-los-protones-se-re.jpg" alt="Berilio">
       </span>
     </div>
-    <div class="tooltip">B - Boro
+    <div class="tooltip">5 = B - Boro
       <span class="tooltiptext">
         Boro: metaloide con usos industriales
       <img src="https://media.istockphoto.com/id/1148208538/es/vector/boron-atom-electron-shell.jpg?s=612x612&w=0&k=20&c=ustfMc64z4JT51Quc40ENrToR6h7XF4MmmfY0Tuj8bM=" alt="Boro">
       </span>
     </div>
-    <div class="tooltip">C - Carbono
+    <div class="tooltip">6 = C - Carbono
       <span class="tooltiptext">
         Carbono: base de la vida
         <img src="https://media.istockphoto.com/id/500262105/es/vector/carbon-atom-on-white-background-estructura.jpg?s=612x612&w=0&k=20&c=n0voCsVEV76H6L4I3iEHg5Rsy2g2yhU9BNQX80QDVXA=" alt="Carbono">
+      </span>
+    </div>
+    <div class="tooltip">7 = N - Nitrógeno
+      <span class="tooltiptext">
+        Nitrógeno: mayor componente del aire
+        <img src="https://st2.depositphotos.com/1763191/8432/v/450/depositphotos_84327488-stock-illustration-symbol-and-electron-diagram-for.jpg" alt="Nitrógeno">
+      </span>
+    </div>
+    <div class="tooltip">8 = O - Oxígeno
+      <span class="tooltiptext">
+        Oxígeno: esencial para la respiración
+        <img src="https://www.shutterstock.com/image-vector/oxygen-atomic-structure-mass-number-260nw-2265915409.jpg" alt="Oxígeno">
+      </span>
+    </div>
+    <div class="tooltip">9 = F - Flúor
+      <span class="tooltiptext">
+        Flúor: muy reactivo, usado en pastas dentales
+        <img src="https://thumbs.dreamstime.com/z/fl%C3%BAor-89682585.jpg" alt="Flúor">
       </span>
     </div>
   </div>
@@ -485,10 +499,16 @@ function verificarSudoku() {
   { tipo: 'imagen', src: 'img14.jpeg', duracion: 3000 },
   { tipo: 'imagen', src: 'img15.jpeg', duracion: 3000 },
   { tipo: 'imagen', src: 'img16.jpeg', duracion: 3000 },
+  { tipo: 'imagen', src: 'img17.jpeg', duracion: 3000 },
   { tipo: 'video', src: 'vid.mp4', duracion: 19000 },
   { tipo: 'video', src: 'vid1.mp4', duracion: 3000 },
   { tipo: 'video', src: 'vid2.mp4', duracion: 45000 },
   { tipo: 'video', src: 'vid3.mp4', duracion: 15000 },
+  { tipo: 'video', src: 'vid4.mp4', duracion: 15000 },
+  { tipo: 'video', src: 'vid5.mp4', duracion: 15000 },
+  { tipo: 'video', src: 'vid6.mp4', duracion: 15000 },
+  { tipo: 'video', src: 'vid7.mp4', duracion: 15000 },
+  { tipo: 'video', src: 'vid8.mp4', duracion: 15000 },
   // puedes agregar más y poner duraciones diferentes
 ];
 </script>
