--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <button id="modoNocheBtn" onclick="alternarModo()">🌙</button>
 
   <h1>Sudoku Químico 🧪</h1>
-  <p class="description">Rellena las casillas con los nombres de los elementos químicos (o sus símbolos) del 1 al 9 sin repetir en la misma fila, columna o subcuadro 3x3.</p>
+  <p class="description">
+    Rellena las casillas con los nombres de los elementos químicos (o sus símbolos) del 1 al 9 sin repetir en la misma fila, columna o subcuadro 3x3.
+  </p>
 
   <div class="controls">
     <label for="difficulty">Selecciona dificultad: </label>
@@ -29,65 +32,71 @@
   </div>
 
   <div id="timer">Tiempo: 0s</div>
-
   <div class="sudoku" id="sudoku-board"></div>
 
-  <div class="controls" style="margin-top:10px;">
+  <div class="controls" style="margin-top: 10px;">
     <button onclick="verificarSudoku()">✅ Verificar</button>
     <button onclick="mostrarSolucionT()">🔍 Mostrar Solución (No recomendado)</button>
     <button onclick="reiniciarJuego()">🔄 Reiniciar</button>
   </div>
 
   <div class="legend">
-
     <div class="tooltip">1 = H - Hidrógeno
       <span class="tooltiptext">
         Hidrógeno: el más ligero
         <img src="https://media.istockphoto.com/id/1408842388/es/vector/h-informaci%C3%B3n-del-elemento-de-hidr%C3%B3geno-hechos-propiedades-tendencias-usos-y-comparaci%C3%B3n.jpg?s=612x612&w=0&k=20&c=6bjme-aQsHwEZ9ZkF726TZ7j-wCALG4TOAe7i4ZSCzA=" alt="Hidrógeno">
       </span>
     </div>
+
     <div class="tooltip">2 = He - Helio
       <span class="tooltiptext">
         Helio: gas noble, muy ligero
         <img src="https://media.istockphoto.com/id/494979590/es/vector/s%C3%ADmbolo-de-electrones-diagrama-helio.jpg?s=612x612&w=0&k=20&c=U8Tva995Pv0c_Gj6hm3CEiet0vPFrR92mFDnKIiPN8U=" alt="Helio">
       </span>
     </div>
+
     <div class="tooltip">3 = Li - Litio
       <span class="tooltiptext">
         Litio: metal alcalino, usado en baterías
         <img src="https://media.istockphoto.com/id/488550064/es/vector/s%C3%ADmbolo-y-diagrama-de-electrones.jpg?s=612x612&w=0&k=20&c=-bAWt_2XYMrwyjTEtxB3SYeS1aprxPYAIJNfw6dUuJE=" alt="Litio">
       </span>
     </div>
+
     <div class="tooltip">4 = Be - Berilio
       <span class="tooltiptext">
         Berilio: metal alcalinotérreo
         <img src="https://previews.123rf.com/images/oorka/oorka1704/oorka170400003/75507009-procesamiento-3d-de-la-estructura-del-%C3%A1tomo-de-berilio-aislado-sobre-fondo-blanco-los-protones-se-re.jpg" alt="Berilio">
       </span>
     </div>
+
     <div class="tooltip">5 = B - Boro
       <span class="tooltiptext">
         Boro: metaloide con usos industriales
-      <img src="https://media.istockphoto.com/id/1148208538/es/vector/boron-atom-electron-shell.jpg?s=612x612&w=0&k=20&c=ustfMc64z4JT51Quc40ENrToR6h7XF4MmmfY0Tuj8bM=" alt="Boro">
+        <img src="https://media.istockphoto.com/id/1148208538/es/vector/boron-atom-electron-shell.jpg?s=612x612&w=0&k=20&c=ustfMc64z4JT51Quc40ENrToR6h7XF4MmmfY0Tuj8bM=" alt="Boro">
       </span>
     </div>
+
     <div class="tooltip">6 = C - Carbono
       <span class="tooltiptext">
         Carbono: base de la vida
         <img src="https://media.istockphoto.com/id/500262105/es/vector/carbon-atom-on-white-background-estructura.jpg?s=612x612&w=0&k=20&c=n0voCsVEV76H6L4I3iEHg5Rsy2g2yhU9BNQX80QDVXA=" alt="Carbono">
       </span>
     </div>
+
     <div class="tooltip">7 = N - Nitrógeno
       <span class="tooltiptext">
         Nitrógeno: mayor componente del aire
         <img src="https://st2.depositphotos.com/1763191/8432/v/450/depositphotos_84327488-stock-illustration-symbol-and-electron-diagram-for.jpg" alt="Nitrógeno">
       </span>
     </div>
+
     <div class="tooltip">8 = O - Oxígeno
       <span class="tooltiptext">
         Oxígeno: esencial para la respiración
         <img src="https://www.shutterstock.com/image-vector/oxygen-atomic-structure-mass-number-260nw-2265915409.jpg" alt="Oxígeno">
       </span>
     </div>
+
     <div class="tooltip">9 = F - Flúor
       <span class="tooltiptext">
         Flúor: muy reactivo, usado en pastas dentales
@@ -106,412 +115,10 @@
   <audio id="sound-correct" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
   <audio id="sound-wrong" src="https://actions.google.com/sounds/v1/cartoon/boing.ogg" preload="auto"></audio>
 
-  <script>
-    const elementos = [
-      { nombre: "Hidrógeno", simbolo: "H", descripcion: "Hidrógeno: el elemento más ligero" },
-      { nombre: "Helio", simbolo: "He", descripcion: "Helio: gas noble y muy ligero" },
-      { nombre: "Litio", simbolo: "Li", descripcion: "Litio: usado en baterías" },
-      { nombre: "Berilio", simbolo: "Be", descripcion: "Berilio: metal alcalinotérreo" },
-      { nombre: "Boro", simbolo: "B", descripcion: "Boro: metaloide con usos industriales" },
-      { nombre: "Carbono", simbolo: "C", descripcion: "Carbono: base de la vida" },
-      { nombre: "Nitrógeno", simbolo: "N", descripcion: "Nitrógeno: mayor componente del aire" },
-      { nombre: "Oxígeno", simbolo: "O", descripcion: "Oxígeno: esencial para la respiración" },
-      { nombre: "Flúor", simbolo: "F", descripcion: "Flúor: muy reactivo, usado en pastas dentales" }
-    ];
+  <div id="video-container" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10002; width: 80vw; height: 45vw; max-width: 800px; max-height: 450px; box-shadow: 0 0 15px rgba(0,0,0,0.7); border-radius: 15px; overflow: hidden;">
+    <div id="youtube-player" style="width: 100%; height: 100%;"></div>
+  </div>
 
-
-    let board = document.getElementById("sudoku-board");
-    let solucion = [];
-    let timerInterval;
-    let tiempo = 0;
-
-    // Para manejar modo (símbolo o nombre)
-    function obtenerTextoElemento(index) {
-      const modo = document.getElementById("displayMode").value;
-      if (modo === "nombre") return elementos[index].nombre;
-      return elementos[index].simbolo;
-    }
-
-    // Tablero base solución (matriz 9x9 de índices 0-8 que corresponden a los elementos)
-    const baseSolucion = [
-      [0,1,2, 3,4,5, 6,7,8],
-      [3,4,5, 6,7,8, 0,1,2],
-      [6,7,8, 0,1,2, 3,4,5],
-
-      [1,2,0, 4,5,3, 7,8,6],
-      [4,5,3, 7,8,6, 1,2,0],
-      [7,8,6, 1,2,0, 4,5,3],
-
-      [2,0,1, 5,3,4, 8,6,7],
-      [5,3,4, 8,6,7, 2,0,1],
-      [8,6,7, 2,0,1, 5,3,4]
-    ];
-
-    // Copia profunda de matriz
-    function copiarMatriz(m) {
-      return m.map(fila => fila.slice());
-    }
-
-    // Mezcla la solución base para obtener diferentes tableros
-    function mezclarSolucion(sol) {
-      let mezcla = copiarMatriz(sol);
-
-      // Intercambiar filas dentro de subcuadros 3x3 (permuta filas dentro de cada bloque)
-      function permutarFilaBloque(bloque) {
-        const base = bloque * 3;
-        const filas = [0,1,2].sort(() => Math.random() - 0.5);
-        let temp = [];
-        for(let i=0;i<3;i++) temp[i] = mezcla[base+filas[i]];
-        for(let i=0;i<3;i++) mezcla[base+i] = temp[i];
-      }
-
-      // Intercambiar columnas dentro de subcuadros 3x3
-      function permutarColumnaBloque(bloque) {
-        const base = bloque * 3;
-        const cols = [0,1,2].sort(() => Math.random() - 0.5);
-        for(let fila=0; fila<9; fila++) {
-          let temp = [];
-          for(let i=0;i<3;i++) temp[i] = mezcla[fila][base+cols[i]];
-          for(let i=0;i<3;i++) mezcla[fila][base+i] = temp[i];
-        }
-      }
-
-      // Aplicar permutaciones aleatorias
-      for(let i=0;i<3;i++) {
-        permutarFilaBloque(i);
-        permutarColumnaBloque(i);
-      }
-
-      return mezcla;
-    }
-
-    // Quitar celdas para formar el puzzle
-    function crearPuzzle(sol, vacias) {
-      let puzzle = copiarMatriz(sol);
-      let celdasVacias = 0;
-      while (celdasVacias < vacias) {
-        let f = Math.floor(Math.random() * 9);
-        let c = Math.floor(Math.random() * 9);
-        if (puzzle[f][c] !== null) {
-          puzzle[f][c] = null;
-          celdasVacias++;
-        }
-      }
-      return puzzle;
-    }
-
-    function crearTablero(vacias) {
-      board.innerHTML = "";
-      tiempo = 0;
-      clearInterval(timerInterval);
-      document.getElementById("timer").textContent = "Tiempo: 0s";
-
-      solucion = mezclarSolucion(baseSolucion);
-      const puzzle = crearPuzzle(solucion, vacias);
-
-      for(let fila=0; fila<9; fila++) {
-        for(let col=0; col<9; col++) {
-          const celda = document.createElement("div");
-          celda.classList.add("cell");
-          if (fila % 3 === 0) celda.classList.add("top-border");
-          if (col % 3 === 0) celda.classList.add("left-border");
-
-          if (puzzle[fila][col] !== null) {
-            // Celda con valor fijo
-            const span = document.createElement("input");
-            span.type = "text";
-            span.disabled = true;
-            span.value = obtenerTextoElemento(puzzle[fila][col]);
-            celda.appendChild(span);
-          } else {
-            // Celda para que usuario escriba
-            const input = document.createElement("input");
-            input.type = "text";
-            input.maxLength = 10;
-            input.autocomplete = "off";
-            input.spellcheck = false;
-            input.addEventListener("input", () => {
-              input.value = input.value.trim();
-              // Convertir a mayúscula inicial para nombres, o mayúscula para símbolos
-              if(document.getElementById("displayMode").value === "nombre"){
-                input.value = input.value.charAt(0).toUpperCase() + input.value.slice(1).toLowerCase();
-              } else {
-                input.value = input.value.toUpperCase();
-              }
-            });
-            celda.appendChild(input);
-          }
-          board.appendChild(celda);
-        }
-      }
-      mostrarLeyenda();
-      iniciarTemporizador();
-    }
-
-    // Mostrar leyenda con elementos y sus símbolos
-    function mostrarLeyenda() {
-      const legend = document.getElementById("legend");
-      legend.innerHTML = "";
-      const modo = document.getElementById("displayMode").value;
-      for(let i=0; i<elementos.length; i++) {
-        const div = document.createElement("div");
-        div.classList.add("legend-item");
-        if(modo === "nombre") {
-          div.textContent = `${elementos[i].nombre} (${elementos[i].simbolo})`;
-        } else {
-          div.textContent = `${elementos[i].simbolo} - ${elementos[i].nombre}`;
-        }
-        legend.appendChild(div);
-      }
-    }
-
-    // Obtener el valor del input en índice, retornando índice de elemento o null
-    function valorInputAIndice(valor) {
-      const modo = document.getElementById("displayMode").value;
-      valor = valor.trim();
-      if (modo === "nombre") {
-        for(let i=0; i<elementos.length; i++) {
-          if (elementos[i].nombre.toLowerCase() === valor.toLowerCase()) return i;
-        }
-      } else {
-        for(let i=0; i<elementos.length; i++) {
-          if (elementos[i].simbolo.toLowerCase() === valor.toLowerCase()) return i;
-        }
-      }
-      return null;
-    }
-
-    // Validar Sudoku
-  function mostrarMedioRandom() {
-  // Escoge uno al azar
-  const medio = medios[Math.floor(Math.random() * medios.length)];
-
-  // Crear el overlay si no existe
-  let overlay = document.getElementById("media-overlay");
-  if (!overlay) {
-    overlay = document.createElement("div");
-    overlay.id = "media-overlay";
-    Object.assign(overlay.style, {
-      position: "fixed",
-      top: 0, left: 0, right: 0, bottom: 0,
-      backgroundColor: "rgba(0,0,0,0.7)",
-      display: "flex",
-      justifyContent: "center",
-      alignItems: "center",
-      zIndex: 9999,
-    });
-    document.body.appendChild(overlay);
-  }
-
-  overlay.innerHTML = "";
-
-  if (medio.tipo === "imagen") {
-    const img = document.createElement("img");
-    img.src = medio.src;
-    img.style.maxWidth = "80vw";
-    img.style.maxHeight = "80vh";
-    overlay.appendChild(img);
-  } else if (medio.tipo === "video") {
-    const video = document.createElement("video");
-    video.src = medio.src;
-    video.style.maxWidth = "80vw";
-    video.style.maxHeight = "80vh";
-    video.autoplay = true;
-    video.controls = false;
-    // video.muted = true; // 🔇 ¡Esto se elimina para que tenga sonido!
-    video.playsInline = true;
-    video.loop = true;
-
-    // Asegurarse que el video esté listo para reproducir con sonido
-    video.addEventListener("canplay", () => {
-      video.play().catch((err) => {
-        console.error("Autoplay con sonido falló:", err);
-      });
-    });
-
-    overlay.appendChild(video);
-  }
-
-  overlay.style.display = "flex";
-
-  // Usa la duración específica de cada medio para ocultar el overlay
-  setTimeout(() => {
-    overlay.style.display = "none";
-  }, medio.duracion);
-}
-
-
-// Ejemplo de uso en la función de verificar sudoku
-function verificarSudoku() {
-  // lógica de verificación...
-
-  const sudokuEstaBien = false; // para probar que esté mal
-
-  if (!sudokuEstaBien) {
-    document.getElementById("sound-wrong").play();
-    mostrarMedioRandom();  // ahora usa duración personalizada
-  }
-}
-
-    // Mostrar mensaje superpuesto
-    function mostrarMensaje(texto, esError) {
-      const overlay = document.getElementById("message-overlay");
-      overlay.textContent = texto;
-      overlay.className = "show";
-      if (esError) overlay.classList.add("error");
-      setTimeout(() => {
-        overlay.className = "";
-      }, 3000);
-    }
-
-    // Mostrar solución
-    function mostrarSolucion() {
-      const inputs = board.querySelectorAll("input:not(:disabled)");
-      inputs.forEach(input => {
-        const celdaDiv = input.parentElement;
-        const pos = Array.from(board.children).indexOf(celdaDiv);
-        const fila = Math.floor(pos / 9);
-        const col = pos % 9;
-        input.value = obtenerTextoElemento(solucion[fila][col]);
-        input.classList.remove("incorrect");
-        input.classList.add("correct");
-      });
-      mostrarMensaje("Solución mostrada", false);
-    }
-
-    // Reiniciar juego (regenera el tablero según dificultad y modo)
-    function reiniciarJuego() {
-      clearInterval(timerInterval);
-      tiempo = 0;
-      const vacias = parseInt(document.getElementById("difficulty").value);
-      crearTablero(vacias);
-    }
-
-    // Temporizador simple
-    function iniciarTemporizador() {
-      clearInterval(timerInterval);
-      tiempo = 0;
-      const timerDisplay = document.getElementById("timer");
-      timerInterval = setInterval(() => {
-        tiempo++;
-        timerDisplay.textContent = `Tiempo: ${tiempo}s`;
-      }, 1000);
-    }
-
-    // Reproducir sonido
-    function reproducirSonido(esCorrecto) {
-      const audio = esCorrecto ? document.getElementById("sound-correct") : document.getElementById("sound-wrong");
-      audio.currentTime = 0;
-      audio.play();
-    }
-
-    // Inicializamos el juego con dificultad media y símbolos
-    reiniciarJuego();
-
-
-  function alternarModo() {
-    document.body.classList.toggle('modo-oscuro');
-    const boton = document.getElementById('modoNocheBtn');
-    boton.textContent = document.body.classList.contains('modo-oscuro') ? '☀️' : '🌙';
-  }
-  </script>
-  <div id="video-container" style="display:none; position:fixed; top:50%; left:50%; transform: translate(-50%, -50%); z-index:10002; width:80vw; height:45vw; max-width: 800px; max-height: 450px; box-shadow: 0 0 15px rgba(0,0,0,0.7); border-radius: 15px; overflow:hidden;">
-  <div id="youtube-player" style="width:100%; height:100%;"></div>
-</div>
-
-<script>
-  // Cargar la API de YouTube solo una vez
-  if (!window.YT) {
-    const tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    document.head.appendChild(tag);
-  }
-
-  let playerYT;
-  let videoReady = false;
-
-  // Esta función se llama cuando la API de YouTube está lista
-  function onYouTubeIframeAPIReady() {
-    playerYT = new YT.Player('youtube-player', {
-      width: '100%',
-      height: '100%',
-      videoId: '', // Se asignará dinámicamente
-      playerVars: {
-        autoplay: 1,
-        controls: 0,
-        modestbranding: 1,
-        rel: 0,
-        disablekb: 1,
-        showinfo: 0,
-        // mute: 1, // quítalo si quieres que suene (requiere clic previo)
-      },
-      events: {
-        onStateChange: function (event) {
-          if (event.data === YT.PlayerState.ENDED) {
-            const videoContainer = document.getElementById('video-container');
-            videoContainer.style.display = 'none';
-            playerYT.stopVideo(); // Detenemos el video
-          }
-        }
-      }
-    });
-
-    videoReady = true;
-  }
-
-  // Esta función la llamas cuando se hace clic en el botón
-  function mostrarSolucionT() {
-    const videoId = '1gUCu2e_JiM'; // tu video
-    const videoContainer = document.getElementById('video-container');
-
-    if (playerYT && videoReady) {
-      playerYT.loadVideoById(videoId);
-      videoContainer.style.display = 'block';
-    } else {
-      // Si el reproductor aún no está listo, espera hasta que lo esté
-      const interval = setInterval(() => {
-        if (playerYT && videoReady) {
-          playerYT.loadVideoById(videoId);
-          videoContainer.style.display = 'block';
-          clearInterval(interval);
-        }
-      }, 100);
-    }
-  }
-</script>
-<div id="multimedia-container" style="display:none; text-align:center; margin-top:20px;"></div>
-<script>
-  const medios = [
-  { tipo: 'imagen', src: 'img.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img1.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img2.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img3.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img4.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img5.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img6.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img7.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img8.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img9.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img10.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img11.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img12.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img13.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img14.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img15.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img16.jpeg', duracion: 3000 },
-  { tipo: 'imagen', src: 'img17.jpeg', duracion: 3000 },
-  { tipo: 'video', src: 'vid.mp4', duracion: 19000 },
-  { tipo: 'video', src: 'vid1.mp4', duracion: 3000 },
-  { tipo: 'video', src: 'vid2.mp4', duracion: 45000 },
-  { tipo: 'video', src: 'vid3.mp4', duracion: 15000 },
-  { tipo: 'video', src: 'vid4.mp4', duracion: 10000 },
-  { tipo: 'video', src: 'vid5.mp4', duracion: 13000 },
-  { tipo: 'video', src: 'vid6.mp4', duracion: 53000 },
-  { tipo: 'video', src: 'vid7.mp4', duracion: 15000 },
-  { tipo: 'video', src: 'vid8.mp4', duracion: 43000 },
-  // puedes agregar más y poner duraciones diferentes
-];
-</script>
-
+  <script src="script.js"></script>
 </body>
 </html>
